--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,5 +1,45 @@
-body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
-a
-  color: #00B7FF
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,200,700')
+
+// VARIABLES
+
+// Colors
+darker-grey = #111
+dark-grey = #333
+grey = #555
+light-grey = #999
+lightest-grey = #efefef
+
+// Typography
+main-coding = 'Source Code Pro'
+main-serif = ''
+
+
+// Headings
+.section-header
+  // text-align center
+  h2
+    font-family main-coding
+    font-size 2em
+
+
+// Sections
+.outer-section
+  margin-bottom 5em
+
+header
+  text-align center
+  h2
+    font-family main-coding
+    font-weight bold
+  p
+    font-style italic
+    font-size 2em
+
+#signup
+  text-align right
+  a
+    margin 1em
+    
+#preview
+  img
+    width 100%
