Corrected package.json to have commands for watching and building css

--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ doctype html
 html
   head
     link(rel='stylesheet',href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css')
-    link(rel='stylesheet',href='/css/index.css')
+    link(rel='stylesheet',href='/stylesheets/index.css')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js')
     title HackerHire
   body
