--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,21 +1,28 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:400,200,700");
+.section-header h2 {
+  font-family: 'Source Code Pro';
+  font-size: 2em;
+}
+.outer-section {
+  margin-bottom: 5em;
+}
 header {
-    text-align: center;
+  text-align: center;
 }
 header h2 {
-    font-family: 'Source Code Pro';
-    font-weight: bold;
+  font-family: 'Source Code Pro';
+  font-weight: bold;
 }
 header p {
-    font-style: italic;
-    font-size: 2em;
+  font-style: italic;
+  font-size: 2em;
 }
 #signup {
-    text-align: right;
+  text-align: right;
 }
 #signup a {
-    margin: 1em;
+  margin: 1em;
 }
 #preview img {
-    width: 100%;
+  width: 100%;
 }
