Added modal, #TODO fix bugs

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -22,6 +22,11 @@ header p {
 }
 #signup a {
   margin: 1em;
+  color: #333;
+}
+#signup li {
+  color: #333;
+  background: #333;
 }
 #preview img {
   width: 100%;
