--- a/public/stylesheets/index.styl
+++ b/public/stylesheets/index.styl
@@ -39,6 +39,10 @@ header
   text-align right
   a
     margin 1em
+    color dark-grey
+  li
+    color dark-grey
+    background dark-grey
     
 #preview
   img
