--- a/public/stylesheets/modal.css
+++ b/public/stylesheets/modal.css
@@ -229,7 +229,7 @@ xsigin/signup popup
   width: 100%;
 }
 .cd-form input.has-padding {
-  padding: 12px 20px 12px 50px;
+  padding: 0px 12px;
 }
 .cd-form input.has-border {
   border: 1px solid #d2d8d8;
@@ -339,7 +339,7 @@ xsigin/signup popup
     margin-bottom: 0;
   }
   .cd-form input.has-padding {
-    padding: 16px 20px 16px 50px;
+    padding: 16px 12px 16px 5px;
   }
   .cd-form input[type=submit] {
     padding: 16px 0;
