--- a/views/index.jade
+++ b/views/index.jade
@@ -10,12 +10,14 @@ html
     script(src='/scripts/script_1.js')
     title HackerHire
   body
-    section#signup.main-nav
-        ul
-          li
-            a.cd-signin(href='#0')
-          li
-            a.cd-signup(href='#0')
+
+    header(role='banner')
+      section#signup.main-nav
+          ul
+            li
+              a.cd-signin(href='#0') LOGIN
+            li
+              a.cd-signup(href='#0') SIGNUP
 
 
     div.cd-user-modal
