--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -7,9 +7,11 @@
   margin-bottom: 5em;
 }
 header {
+  width: 100%;
   text-align: center;
 }
 header h2 {
+  margin-left: 1.5em;
   font-family: 'Source Code Pro';
   font-weight: bold;
 }
