--- a/public/stylesheets/index.styl
+++ b/public/stylesheets/index.styl
@@ -27,8 +27,10 @@ main-serif = ''
   margin-bottom 5em
 
 header
+  width 100%
   text-align center
   h2
+    margin-left 1.5em
     font-family main-coding
     font-weight bold
   p
