--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,28 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro:400,200,700");
+.section-header h2 {
+  font-family: 'Source Code Pro';
+  font-size: 2em;
 }
-a {
-  color: #00b7ff;
+.outer-section {
+  margin-bottom: 5em;
+}
+header {
+  text-align: center;
+}
+header h2 {
+  font-family: 'Source Code Pro';
+  font-weight: bold;
+}
+header p {
+  font-style: italic;
+  font-size: 2em;
+}
+#signup {
+  text-align: right;
+}
+#signup a {
+  margin: 1em;
+}
+#preview img {
+  width: 100%;
 }
