Added initial reset password support

--- a/views/index.jade
+++ b/views/index.jade
@@ -87,7 +87,7 @@ html
               input#reset-email.full-width.has-padding.has-border(type='email', placeholder='E-mail')
               span.cd-error-message Error message here!
             p.fieldset
-              input.full-width.has-padding(type='submit', value='Reset password')
+              input.full-width.has-padding(type='button', value='Reset password', onclick='reset_password_submit_click()')
           p.cd-form-bottom-message
             a(href='#0') Back to log-in
         // cd-reset-password
