--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -1,7 +1,21 @@
 doctype html
 html
     head
+        link(rel='stylesheet',href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css')
+        link(rel='stylesheet',href='/stylesheets/index.css')
+        link(rel='stylesheet',href='/stylesheets/modal.css')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js')
+        script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js')
+        script(src='/scripts/script_1.js')
         title $ORGANISATION : Hackerhire
     body
-        p This is a sample dashboard. It will contain history of company and a button to create new interview session
+        header(role='banner')
+            section#signup.main-nav
+                ul
+                    li
+                        h5 Hackerhire
+                    li
+                        a.cd-signin(href='#0') New
+                    li
+                        a.cd-signup(href='/logout') Sign out
 
