--- a/views/index.jade
+++ b/views/index.jade
@@ -3,10 +3,12 @@ doctype html
 html
   head
     link(rel='stylesheet',href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css')
+    link(rel='stylesheet',href='https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css')
     link(rel='stylesheet',href='/stylesheets/index.css')
     link(rel='stylesheet',href='/stylesheets/modal.css')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js')
     script(src='/scripts/script_1.js')
     title HackerHire
   body
