--- a/views/room2.jade
+++ b/views/room2.jade
@@ -2,9 +2,13 @@ doctype html
 html
     head
         title Hackerhire
-        link(rel='stylesheet',href='/stylesheets/room.css')
+        link(rel='stylesheet',href='http://yui.yahooapis.com/pure/0.6.0/pure-min.css')
+        link(rel='stylesheet',href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css')
+        
+        link(rel='stylesheet',href='/stylesheets/room\ copy.css')
         script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/0.3.14/peer.js")
         script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js")
+
         script.
             // Compatibility shim
             navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
