Added flash message support for nice interaction

--- a/views/reset.jade
+++ b/views/reset.jade
@@ -2,6 +2,7 @@ html
     head
         title Hackerhire : Reset Password
     body
+        p Error  : #{message}
         form(method='post')
             //- Not settting action, cause it to use same url
             label(for='cd-reset-password') Password
