--- a/public/stylesheets/room.styl
+++ b/public/stylesheets/room.styl
@@ -25,9 +25,8 @@ nav
 	margin-left 0.25em
 
 .outer-container
-	height 95%
+	height 88%
 	bottom 0
-	background-color blue
 
 .inner-container
 	bottom 0
@@ -38,10 +37,42 @@ nav
 	#main-title
 		font-family main-coding
 		font-weight bold
+
 	
 #mid-col
-	background-color dark-grey
+	padding 0
 	
+// SWAPPER 
+
+#swapperDiv
+	width 100%
+	background-color #272822
+
+#swapButton
+	margin 0.5em
+	
+
+// CODE MIRROR
+
+#codepanel
+	select
+		display inline
+		margin 0
+		padding 0
+	line-height 2em
+	
+#codeEditor
+	display block
+		
+.CodeMirror
+	height 85vh
+	
+.iobox
+	background-color lightest-grey
+	color darker-grey
+
+
+
 #right-col
 	background-color lightest-grey
 
