Add the canvas along with collaboration using data channel

--- a/views/room.jade
+++ b/views/room.jade
@@ -28,6 +28,7 @@ html
         script(type='text/javascript').
             function initRoom(){
             compilerController.init();
+            initCanvas();
             }
         
 
@@ -79,6 +80,13 @@ html
 
                 form.myeditor#codeboard
                     textarea#codeEditor 
+
+                div#canvasDiv
+
+                div#canvasPanel
+                    div#clearBoard Clear
+                    div#setModeDraw Draw
+                    div#setModeErase Erase
 
 
             section#right-col.col.s3.inner-container
