--- a/public/stylesheets/room.styl
+++ b/public/stylesheets/room.styl
@@ -42,6 +42,16 @@ nav
 #mid-col
 	padding 0
 	
+	#canvasDiv
+		width 100%
+	#canvas
+		box-sizing border-box
+	
+#canvasPanel
+	display inline
+	div
+		display inline
+		background inherit
 // SWAPPER 
 
 #swapperDiv
